--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </script>
     <script type="text/javascript">
         (function(){
-            emailjs.init(process.env.YOUR_PUBLIC_KEY);
+            emailjs.init(process.env.REACT_APP_PUBLIC_KEY);
         })();
     </script>
     <!--
